--- a/css/style.css
+++ b/css/style.css
@@ -124,16 +124,23 @@ Author:	Xioyuna
 /* 3. General */
 
 body {
-  font-family: "Rubik", -apple-system, SF Pro Text, SF UI Text, system-ui, Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-family: "Rubik", -apple-system, SF Pro Text, SF UI Text, system-ui,
+    Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 .page {
   background-color: var(--background-color);
+}
+.page-theme-transition {
   transition: background-color 0.4s;
 }
+
 .page-content {
   padding-left: 15px;
   padding-right: 15px;
-  padding-bottom: calc(var(--f7-page-toolbar-bottom-offset, 0px) + var(--f7-safe-area-bottom) + var(--f7-page-content-extra-padding-bottom, 0px) + 20px);
+  padding-bottom: calc(
+    var(--f7-page-toolbar-bottom-offset, 0px) + var(--f7-safe-area-bottom) +
+      var(--f7-page-content-extra-padding-bottom, 0px) + 20px
+  );
 }
 .full-width {
   margin-left: -15px;
@@ -936,7 +943,11 @@ p .icon-radio {
   position: absolute;
   bottom: 0;
   padding: 60px 18px 15px 18px;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgb(24 24 24 / 95%) 100%);
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0,
+    rgb(24 24 24 / 95%) 100%
+  );
   color: #fff;
   width: 100%;
   box-sizing: border-box;
@@ -1183,7 +1194,16 @@ form h1 {
   font-size: 15px;
   background-size: 50% 100%;
   background-repeat: no-repeat;
-  background-image: radial-gradient(circle at 0 50%, rgba(0, 0, 0, 0) 0.7em, var(--light-gray) 0), radial-gradient(circle at 100% 50%, rgba(0, 0, 0, 0) 0.7em, var(--light-gray) 0);
+  background-image: radial-gradient(
+      circle at 0 50%,
+      rgba(0, 0, 0, 0) 0.7em,
+      var(--light-gray) 0
+    ),
+    radial-gradient(
+      circle at 100% 50%,
+      rgba(0, 0, 0, 0) 0.7em,
+      var(--light-gray) 0
+    );
   background-position: top left, top right;
   overflow: hidden;
   padding: 20px 30px;
@@ -1467,7 +1487,10 @@ form h1 {
   font-size: 15px;
 }
 .page[data-name="chat"] .page-content {
-  padding-bottom: calc(var(--f7-page-toolbar-bottom-offset, 0px) + var(--f7-safe-area-bottom) + var(--f7-page-content-extra-padding-bottom, 0px));
+  padding-bottom: calc(
+    var(--f7-page-toolbar-bottom-offset, 0px) + var(--f7-safe-area-bottom) +
+      var(--f7-page-content-extra-padding-bottom, 0px)
+  );
 }
 .ios .message-sent .message-bubble {
   padding: 8px 20px 8px 13px;
@@ -1826,7 +1849,9 @@ img.actor-image {
   line-height: 14px;
   color: var(--title-color);
   pointer-events: none;
-  right: calc(var(--f7-list-item-padding-horizontal) + var(--f7-safe-area-right));
+  right: calc(
+    var(--f7-list-item-padding-horizontal) + var(--f7-safe-area-right)
+  );
   content: var(--f7-list-chevron-icon-right);
 }
 .link-banner.bg-color-primary,
@@ -2371,7 +2396,10 @@ img.actor-image {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding-bottom: calc(var(--f7-page-toolbar-bottom-offset, 0px) + var(--f7-safe-area-bottom) + var(--f7-page-content-extra-padding-bottom, 0px) - 20px);
+  padding-bottom: calc(
+    var(--f7-page-toolbar-bottom-offset, 0px) + var(--f7-safe-area-bottom) +
+      var(--f7-page-content-extra-padding-bottom, 0px) - 20px
+  );
 }
 .navbar a.link.onboarding-skip {
   font-weight: 500;
@@ -2725,7 +2753,11 @@ img.actor-image {
   box-shadow: none;
 }
 .dark .card-image-footer {
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgb(24 24 24 / 80%) 100%);
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0,
+    rgb(24 24 24 / 80%) 100%
+  );
 }
 .dark .card-author-footer {
   background-color: var(--light-gray);
@@ -2768,7 +2800,16 @@ img.actor-image {
   color: #000 !important;
 }
 .dark .ticket {
-  background-image: radial-gradient(circle at 0 50%, rgba(0, 0, 0, 0) 0.7em, var(--light-gray) 0), radial-gradient(circle at 100% 50%, rgba(0, 0, 0, 0) 0.7em, var(--light-gray) 0);
+  background-image: radial-gradient(
+      circle at 0 50%,
+      rgba(0, 0, 0, 0) 0.7em,
+      var(--light-gray) 0
+    ),
+    radial-gradient(
+      circle at 100% 50%,
+      rgba(0, 0, 0, 0) 0.7em,
+      var(--light-gray) 0
+    );
 }
 .dark .timeline-item-inner {
   background: transparent;
